Détailler le chocolat en pépites

--- a/realisation.html
+++ b/realisation.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Réalisation : </h1>
     <ul>
-        <li> Détailler le chocolat en pépites</li>
+        <li> <del>Détailler le chocolat en pépites</del></li>
         <li> Préchauffer le four à 180 °C (thermostat 6)</li>
         <li> Dans un saladier, mettre 75 g de beurre, le sucre, l'oeuf entier, la vanille et mélanger le tout</li>
         <li> Ajouter petit à petit la farine mélangée à la levure, le sel et le chocolat</li>
