--- a/ingredients.html
+++ b/ingredients.html
@@ -12,10 +12,10 @@
         <li> 85 g de beurre mou</li>
         <li> 1 oeuf</li>
         <li> 85g de sucre</li>
-        <li> 1 sachet de sucre vanille 150g de Farine</li>
+        <li> 1 sachet de sucre vanillé 150g de Farine</li>
         <li> 100g de chocolat noir</li>
-        <li> 1 culliere a cafe de sel</li>
-        <li> 1 culliere a café de levure chimique</li>
+        <li> 1 culliere à café de sel</li>
+        <li> 1 culliere à café de levure chimique</li>
     </ul>
 </body>
 
