--- a/realisation.html
+++ b/realisation.html
@@ -10,7 +10,7 @@
     <h1>Réalisation : </h1>
     <ul>
         <li> <del>Détailler le chocolat en pépites</del></li>
-        <li> Préchauffer le four à 180 °C (thermostat 6)</li>
+        <li> <del>Préchauffer le four à 180 °C (thermostat 6)</del></li>
         <li> Dans un saladier, mettre 75 g de beurre, le sucre, l'oeuf entier, la vanille et mélanger le tout</li>
         <li> Ajouter petit à petit la farine mélangée à la levure, le sel et le chocolat</li>
         <li> Beurrer une plauqe alant au four et former les cookies sur la plaque</li>
