--- a/realisation.html
+++ b/realisation.html
@@ -12,7 +12,7 @@
         <li> <del>Détailler le chocolat en pépites</del></li>
         <li> <del>Préchauffer le four à 180 °C (thermostat 6)</del></li>
         <li> <del> un saladier, mettre 75 g de beurre, le sucre, l'oeuf entier, la vanille et mélanger le tout</del></li>
-        <li> Ajouter petit à petit la farine mélangée à la levure, le sel et le chocolat</li>
+        <li> <del>Ajouter petit à petit la farine mélangée à la levure, le sel et le chocolat</del></li>
         <li> Beurrer une plauqe alant au four et former les cookies sur la plaque</li>
         <li> Pour former les cookies, utiliser 2 cullières à soupe et faire des petits tas espacés ls uns es autres; ils grandiront à la cuisson</li>
         <li> Enfourner pour 10 minutes de cuisson</li>
