--- a/realisation.html
+++ b/realisation.html
@@ -14,7 +14,7 @@
         <li> <del> un saladier, mettre 75 g de beurre, le sucre, l'oeuf entier, la vanille et mélanger le tout</del></li>
         <li> <del>Ajouter petit à petit la farine mélangée à la levure, le sel et le chocolat</del></li>
         <li> <del>Beurrer une plauqe alant au four et former les cookies sur la plaque</del></li>
-        <li> Pour former les cookies, utiliser 2 cullières à soupe et faire des petits tas espacés ls uns es autres; ils grandiront à la cuisson</li>
+        <li> <del>Pour former les cookies, utiliser 2 cullières à soupe et faire des petits tas espacés ls uns es autres; ils grandiront à la cuisson</del></li>
         <li> Enfourner pour 10 minutes de cuisson</li>
     </ul>
 </body>
