--- a/realisation.html
+++ b/realisation.html
@@ -16,6 +16,7 @@
         <li> <del>Beurrer une plauqe alant au four et former les cookies sur la plaque</del></li>
         <li> <del>Pour former les cookies, utiliser 2 cullières à soupe et faire des petits tas espacés ls uns es autres; ils grandiront à la cuisson</del></li>
         <li> <del>Enfourner pour 10 minutes de cuisson</del></li>
+        <li> Pour dresser un plat avec les cookies réalisés, tout dans la gamelle du chat</li>
     </ul>
 </body>
 
